--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ROYAL HOTEL | Responsive Travel & Tourism Template</title>
+        <title>Batu Emas Inn</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -161,7 +161,7 @@
         <!-- Welcome Section Start -->
         <div id="welcome">
             <div class="container">
-                <h3>Welcome to Royal Hotel</h3>
+                <h3>Welcome to Batu Emas Inn</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida sollicitudin turpis id posuere. Fusce nec rhoncus nibh. Fusce arcu libero, euismod eget commodo at, venenatis a nisi. Sed faucibus metus sed leo vulputate blandit.</p>
                 <a href="#">Book Now</a>
             </div>
@@ -617,7 +617,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="tel:+12345678900">+1 234 567 8900</a>
+                        <a href="tel:+12345678900">+0812 2513 0883</a>
                     </div>
                 </div>
             </div>
