--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+1 234 567 8900</div>
+            <div class="phone"><i class="fa fa-phone"></i>+62 0812-2513-0883</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
@@ -617,7 +617,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="tel:+12345678900">+0812 2513 0883</a>
+                        <a href="tel:+12345678900">+62 0812 2513 0883</a>
                     </div>
                 </div>
             </div>
