--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+62 0812-2513-0883</div>
+            <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
@@ -617,7 +617,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="tel:+12345678900">+62 0812 2513 0883</a>
+                        <a href="tel:+12345678900">+62 0822 2664 4055</a>
                     </div>
                 </div>
             </div>
@@ -632,14 +632,14 @@
                         <div class="social">
                             <a href=""><li class="fa fa-instagram"></li></a>
                             <a href=""><li class="fa fa-twitter"></li></a>
-                            <a href=""><li class="fa fa-facebook-f"></li></a>
+                            <a href="https://www.facebook.com/p/Wisma-batu_emas-100063599377883/"><li class="fa fa-facebook-f"></li></a>
                         </div>
                     </div>
                     <div class="col-12">
-                        <p>Copyright &#169; 2045 <a href="">Your Site Name</a> All Rights Reserved.</p>
+                        <p>Copyright &#169; 2045 <a href="#">Batu Emas Inn</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						<p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+						<p>Designed By <a href="https://mark-pigome-resume.vercel.app/">Mark Pigome</a></p>
                     </div>
                 </div>
             </div>
