--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="" name="description">
 
         <!-- Favicons -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/batu.ico" rel="icon">
         <link href="img/apple-favicon.png" rel="apple-touch-icon">
 
         <!-- Google Fonts -->
@@ -30,7 +30,7 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/batu2.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
