--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/batu1.PNG" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/batuemas4.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
