--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div id="welcome">
             <div class="container">
                 <h3>Welcome to Batu Emas Inn</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida sollicitudin turpis id posuere. Fusce nec rhoncus nibh. Fusce arcu libero, euismod eget commodo at, venenatis a nisi. Sed faucibus metus sed leo vulputate blandit.</p>
+                <p>Experience comfort and elegance with us. Nestled in serene surroundings, our inn promises a delightful stay. Immerse yourself in unparalleled hospitality and make lasting memories. Welcome to your home away from home.</p>
                 <a href="#">Book Now</a>
             </div>
         </div>
@@ -168,7 +168,7 @@
                 <div class="section-header">
                     <h2>Amenities & Services</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.
+                        Discover our amenities & services. Enjoy high-speed WiFi and efficient AC, ensuring a comfortable and connected stay.
                     </p>
                 </div>
                 <div class="row">
