--- a/booking.html
+++ b/booking.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ROYAL HOTEL | Responsive Travel & Tourism Template</title>
+        <title>Batu Emas Inn</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
 
         <!-- Favicons -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/batu.ico" rel="icon">
         <link href="img/apple-favicon.png" rel="apple-touch-icon">
 
         <!-- Google Fonts -->
@@ -29,7 +29,7 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+1 234 567 8900</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
@@ -188,14 +188,14 @@
                         <div class="social">
                             <a href=""><li class="fa fa-instagram"></li></a>
                             <a href=""><li class="fa fa-twitter"></li></a>
-                            <a href=""><li class="fa fa-facebook-f"></li></a>
+                            <a href="https://www.facebook.com/p/Wisma-batu_emas-100063599377883/"><li class="fa fa-facebook-f"></li></a>
                         </div>
                     </div>
                     <div class="col-12">
-                        <p>Copyright &#169; 2045 <a href="">Your Site Name</a> All Rights Reserved.</p>
+                        <p>Copyright &#169; 2045 <a href="">Batu Emas Inn</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						<p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+						<p>Designed By <a href="https://mark-pigome-resume.vercel.app/">Mark Pigome</a></p>
                     </div>
                 </div>
             </div>
