--- a/amenities.html
+++ b/amenities.html
@@ -116,7 +116,7 @@
                         <p>Copyright &#169; 2045 <a href="">Your Site Name</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						<p>Designed By <a href="https://mark-pigome-resume.vercel.app/">HTML Codex</a></p>
+						<p>Designed By <a href="https://mark-pigome-resume.vercel.app/">Mark Pigome</a></p>
                     </div>
                 </div>
             </div>
