--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055/div>
+            <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
