--- a/contact.html
+++ b/contact.html
@@ -60,17 +60,17 @@
                         <div class="row contact-info">
                             <div class="col-md-4">
                                 <div class="info-item">
-                                    <p><i class="fa fa-map-marker"></i>22 Wolf Road, California</p>
+                                    <p><i class="fa fa-map-marker"></i>Jl. Ahmad Yani No.82, Timika, Indonesia</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="info-item">
-                                    <p><i class="fa fa-envelope"></i> <a href="mailto:info@example.com">info@example.com</a></p>
+                                    <p><i class="fa fa-envelope"></i> <a href="mailto:info@example.com">wismabatuemas016@gmail.com</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="info-item">
-                                    <p><i class="fa fa-phone"></i><a href="tel:+1 234 567 8900">+1 234 567 8900</a></p>
+                                    <p><i class="fa fa-phone"></i><a href="tel:+1 234 567 8900">+62 0822 2664 4055</a></p>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <p>Copyright &#169; 2045 <a href="">Batu Emas Inn</a> All Rights Reserved.</p>
+                        <p>Copyright &#169; 2024 <a href="">Batu Emas Inn</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 						<p>Designed By <a href="https://mark-pigome-resume.vercel.app/">Mark Pigome</a></p>
