--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
-
+	    
         <!-- Favicons -->
         <link href="img/batu.ico" rel="icon">
         <link href="img/apple-favicon.png" rel="apple-touch-icon">
@@ -50,7 +50,7 @@
         <div id="about">
     <div class="container">
         <div class="section-header">
-            <h2>About Royal Hotel</h2>
+            <h2>About Batu Emas Inn</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.</p>
         </div>
 
@@ -58,14 +58,14 @@
             <!-- Image Column with Full Width -->
             <div class="col-md-12 img-cols"> <!-- Adjusted to col-md-12 for full width -->
                 <div class="img-col">
-                    <img class="img-fluid" src="img/batuemas1.jpeg" alt="Royal Hotel Image" style="width: 100%; height: auto;"> <!-- Added inline style for full width -->
+                    <img class="img-fluid" src="img/batuemas1.jpeg" alt="Batu Emas Inn Image" style="width: 100%; height: auto;"> <!-- Added inline style for full width -->
                 </div>
             </div>
 
             <!-- Content Column -->
             <div class="col-md-12 content-cols"> <!-- Adjusted to col-md-12 for full width -->
                 <div class="content-col">
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3>Batu Emas Inn</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium.</p>
                     <p>Nam fringilla justo justo. Proin sodales bibendum pharetra. Aliquam blandit sapien eu nisl dictum pretium.</p>
                     <a href="#">Learn More</a>
