--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                         <div class="row contact-info">
                             <div class="col-md-4">
                                 <div class="info-item">
-                                    <p><i class="fa fa-map-marker"></i> <a> Jl. Ahmad Yani No.82, Timika, Indonesia</a></p>
+                                    <p><i class="fa fa-map-marker"></i> <a> Jl. Jend. Ahmad Yani No.82Kwamki, Kec. Mimika Baru, Kabupaten Mimika, Papua 99971</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
