--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                         <div class="social">
                             <a href=""><li class="fa fa-instagram"></li></a>
                             <a href=""><li class="fa fa-twitter"></li></a>
-                            <a href="https://www.facebook.com/p/Wisma-batu_emas-100063599377883/"><li class="fa fa-facebook-f"></li></a>
+                            <a href="https://www.facebook.com/profile.php?id=61553861256621"><li class="fa fa-facebook-f"></li></a>
                         </div>
                     </div>
                     <div class="col-12">
