--- a/amenities.html
+++ b/amenities.html
@@ -55,47 +55,48 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.
                     </p>
                 </div>
-                <div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-2"></i>
-    <h3>AC (Pengkondisian Udara)</h3>
-    <p>Pengalaman udara segar dengan AC yang nyaman di setiap kamar.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-3"></i>
-    <h3>Bak Mandi</h3>
-    <p>Nikmati kesegaran dengan bak mandi yang luas dan nyaman.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-4"></i>
-    <h3>Shower</h3>
-    <p>Tersedia fasilitas shower modern untuk kenyamanan Anda.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-6"></i>
-    <h3>Televisi</h3>
-    <p>Hiburan berkualitas dengan televisi layar datar di setiap kamar.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-7"></i>
-    <h3>WiFi</h3>
-    <p>Koneksi internet cepat dan stabil dengan Wi-Fi gratis di seluruh area.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-8"></i>
-    <h3>Telepon</h3>
-    <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-9"></i>
-    <h3>Mini Bar</h3>
-    <p>Nikmati minuman dingin dan makanan ringan dari mini bar di kamar Anda.</p>
-</div>
-<div class="col-md-3 col-sm-6 icons">
-    <i class="icon icon-10"></i>
-    <h3>Dapur</h3>
-    <p>Fasilitas dapur lengkap untuk memenuhi kebutuhan memasak Anda.</p>
-</div>
-
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-2"></i>
+                        <h3>Air Conditioner</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-3"></i>
+                        <h3>Bathtub</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-4"></i>
+                        <h3>Shower</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-6"></i>
+                        <h3>Television</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-7"></i>
+                        <h3>WiFi</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-8"></i>
+                        <h3>Telephone</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-9"></i>
+                        <h3>Mini Bar</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 icons">
+                        <i class="icon icon-10"></i>
+                        <h3>Kitchen</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Amenities Section Start -->
