--- a/amenities.html
+++ b/amenities.html
@@ -29,76 +29,78 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/BatuEmas.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="room.html">Rooms</a></li>
-                    <li class="active"><a href="amenities.html">Amenities</a></li>
-                    <li><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="index.html">Beranda</a></li>
+<li><a href="about.html">Tentang Kami</a></li>
+<li><a href="room.html">Kamar</a></li>
+<li class="active"><a href="amenities.html">Fasilitas</a></li>
+<li><a href="booking.html">Pemesanan</a></li>
+<li><a href="login.html">Masuk</a></li>
+<li><a href="contact.html">Hubungi Kami</a></li>
+
                 </ul>
             </nav>
         </header>
         <!-- Header Section End -->
         
         <!-- Amenities Section Start -->
-        <div id="amenities">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Amenities & Services</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.
-                    </p>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-2"></i>
-                        <h3>Air Conditioner</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-3"></i>
-                        <h3>Bathtub</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-4"></i>
-                        <h3>Shower</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-6"></i>
-                        <h3>Television</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-7"></i>
-                        <h3>WiFi</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-8"></i>
-                        <h3>Telephone</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-9"></i>
-                        <h3>Mini Bar</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-3 col-sm-6 icons">
-                        <i class="icon icon-10"></i>
-                        <h3>Kitchen</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    </div>
-                </div>
+        <div id="amenities" class="home-amenities">
+    <div class="container">
+        <div class="section-header">
+            <h2>Fasilitas & Layanan</h2>
+            <p>
+                Temukan fasilitas & layanan kami. Nikmati WiFi berkecepatan tinggi dan AC yang efisien, menjamin tinggal yang nyaman dan terkoneksi.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-2"></i>
+                <h3>Pengkondisian Udara</h3>
+                <p>Nikmati udara yang segar dengan sistem AC modern kami.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-3"></i>
+                <h3>Bak Mandi</h3>
+                <p>Santai dan bersantai di bak mandi kami yang luas dan nyaman.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-4"></i>
+                <h3>Shower</h3>
+                <p>Nikmati fasilitas shower modern untuk pengalaman mandi yang menyegarkan.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-6"></i>
+                <h3>Televisi</h3>
+                <p>Hibur diri Anda dengan televisi layar datar definisi tinggi kami.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-7"></i>
+                <h3>WiFi</h3>
+                <p>Tetap terkoneksi dengan layanan Wi-Fi kami yang cepat dan handal.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-8"></i>
+                <h3>Telepon</h3>
+                <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-9"></i>
+                <h3>Mini Bar</h3>
+                <p>Nikmati minuman dingin dan makanan ringan dari mini bar di kamar Anda.</p>
+            </div>
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-10"></i>
+                <h3>Dapur</h3>
+                <p>Fasilitas dapur lengkap untuk memenuhi kebutuhan memasak Anda.</p>
             </div>
         </div>
+    </div>
+</div>
+
         <!-- Amenities Section Start -->
         
         <!-- Footer Section Start -->
