--- a/amenities.html
+++ b/amenities.html
@@ -48,7 +48,7 @@
         <!-- Header Section End -->
         
         <!-- Amenities Section Start -->
-        <div id="amenities" class="home-amenities">
+         <div id="amenities" class="home-amenities">
     <div class="container">
         <div class="section-header">
             <h2>Fasilitas & Layanan</h2>
@@ -62,11 +62,12 @@
                 <h3>Pengkondisian Udara</h3>
                 <p>Nikmati udara yang segar dengan sistem AC modern kami.</p>
             </div>
-            <div class="col-md-3 col-sm-6 icons">
-                <i class="icon icon-3"></i>
-                <h3>Bak Mandi</h3>
-                <p>Santai dan bersantai di bak mandi kami yang luas dan nyaman.</p>
+	    <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-time"></i> 
+        	<h3>Layanan 24 Jam</h3>
+                <p>Nikmati kenyamanan layanan kami yang tersedia 24 jam sehari. Santai dan bersantai di bak mandi kami yang luas dan nyaman.</p>
             </div>
+
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-4"></i>
                 <h3>Shower</h3>
@@ -87,20 +88,20 @@
                 <h3>Telepon</h3>
                 <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
             </div>
-            <div class="col-md-3 col-sm-6 icons">
-                <i class="icon icon-9"></i>
-                <h3>Mini Bar</h3>
-                <p>Nikmati minuman dingin dan makanan ringan dari mini bar di kamar Anda.</p>
-            </div>
+	<div class="col-md-3 col-sm-6 icons">
+    		<i class="icon icon-parking"></i> <!-- Assuming "icon-parking" represents a parking icon -->
+    		<h3>Parking</h3>
+   		 <p>Nikmati fasilitas parkir yang nyaman dan aman di area kami untuk kenyamanan Anda.</p>
+	    </div>
+
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-10"></i>
-                <h3>Dapur</h3>
-                <p>Fasilitas dapur lengkap untuk memenuhi kebutuhan memasak Anda.</p>
+                <h3>Restaurant</h3>
+                <p>Nikmati sajian makanan lezat dari berbagai pilihan menu di restoran kami yang nyaman dan berkualitas.</p>
             </div>
         </div>
     </div>
 </div>
-
         <!-- Amenities Section Start -->
         
         <!-- Footer Section Start -->
