--- a/amenities.html
+++ b/amenities.html
@@ -63,9 +63,9 @@
                 <p>Nikmati udara yang segar dengan sistem AC modern kami.</p>
             </div>
 	    <div class="col-md-3 col-sm-6 icons">
-                <i class="icon icon-time"></i> 
+                <img src="img/icon/time-icon.PNG" alt="Time Icon">
         	<h3>Layanan 24 Jam</h3>
-                <p>Nikmati kenyamanan layanan kami yang tersedia 24 jam sehari. Santai dan bersantai di bak mandi kami yang luas dan nyaman.</p>
+                <p>Nikmati kenyamanan layanan kami yang tersedia 24 jam sehari. </p>
             </div>
 
             <div class="col-md-3 col-sm-6 icons">
@@ -89,7 +89,7 @@
                 <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
             </div>
 	<div class="col-md-3 col-sm-6 icons">
-    		<i class="icon icon-parking"></i> <!-- Assuming "icon-parking" represents a parking icon -->
+    		<img src="img/icon/parking-icon.PNG" alt="Parking Icon">
     		<h3>Parking</h3>
    		 <p>Nikmati fasilitas parkir yang nyaman dan aman di area kami untuk kenyamanan Anda.</p>
 	    </div>
