--- a/amenities.html
+++ b/amenities.html
@@ -63,7 +63,7 @@
                 <p>Nikmati udara yang segar dengan sistem AC modern kami.</p>
             </div>
 	    <div class="col-md-3 col-sm-6 icons">
-               <i class="fa fa-clock-o icon icon-25"></i>
+               <i class="icon icon-25"></i>
         	<h3>Layanan 24 Jam</h3>
                 <p>Nikmati kenyamanan layanan kami yang tersedia 24 jam sehari. </p>
             </div>
@@ -89,7 +89,7 @@
                 <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
             </div>
 	<div class="col-md-3 col-sm-6 icons">
-    		<i class="fa fa-car icon icon-15"></i>
+    		<i class="icon icon-15"></i>
     		<h3>Parking</h3>
    		 <p>Nikmati fasilitas parkir yang nyaman dan aman di area kami untuk kenyamanan Anda.</p>
 	    </div>
