--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </div>
         <!-- Amenities Section Start -->
         
-        <!-- Room Section Start -->
+      
 <!-- Room Section Start -->
 <div id="rooms">
     <div class="container">
@@ -220,7 +220,7 @@
                 <div class="col-md-3">
                     <div class="room-img">
                         <div class="box12">
-                            <img src="img/room/room-1.jpg">
+                            <img src="img/Junior.JPG">
                             <div class="box-content">
                                 <h3 class="title">Junior</h3>
                                 <ul class="icon">
@@ -243,67 +243,87 @@
                 <div class="col-md-3">
                     <div class="room-rate">
                         <h3>From</h3>
-                        <h1>$350.000 Rp</h1>
-                        <a href="#">Book Now</a>
+                        <h1>$350</h1>
+                        <a href="#">Pesan</a>
                     </div>
                 </div>
             </div>
             <hr>
         </div>
 
-        <!-- Kamar Superior -->
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-3">
-                    <!-- Room Image Content for Superior -->
-                </div>
-                <div class="col-md-6">
-                    <div class="room-des">
-                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Double Superior</a></h3>
-                        <p>Nikmati kemewahan dan kenyamanan Kamar Superior kami yang luas dengan desain modern dan fasilitas terbaik untuk pengalaman menginap yang tak terlupakan.</p>
-                        <ul class="room-size">
-                            <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
-                            <li><i class="fa fa-arrow-right"></i>Beds: 2 Double(s) </li>
+       <!-- Kamar Superior -->
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="room-img">
+                <div class="box12">
+                    <img src="img/Superior.JPG"> <!-- Added image content for Superior room -->
+                    <div class="box-content">
+                        <h3 class="title">Superior</h3>
+                        <ul class="icon">
+                            <li><a href="#" data-toggle="modal" data-target="#modal-id"><i class="fa fa-link"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="room-rate">
-                        <h3>From</h3>
-                        <h1>$405.000 Rp</h1>
-                        <a href="#">Book Now</a>
-                    </div>
-                </div>
             </div>
-            <hr>
         </div>
+        <div class="col-md-6">
+            <div class="room-des">
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Double Superior</a></h3>
+                <p>Nikmati kemewahan dan kenyamanan Kamar Superior kami yang luas dengan desain modern dan fasilitas terbaik untuk pengalaman menginap yang tak terlupakan.</p>
+                <ul class="room-size">
+                    <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
+                    <li><i class="fa fa-arrow-right"></i>Beds: 1 Single or Double(s) </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="room-rate">
+                <h3>From</h3>
+                <h1>$405</h1>
+                <a href="#">Pesan</a>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
 
-        <!-- Kamar Deluxe -->
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-3">
-                    <!-- Room Image Content for Deluxe -->
-                </div>
-                <div class="col-md-6">
-                    <div class="room-des">
-                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Single Deluxe</a></h3>
-                        <p>Hadiri kenyamanan luar biasa dalam Kamar Deluxe kami yang menawarkan desain mewah, fasilitas premium, dan pemandangan yang menakjubkan untuk pengalaman menginap yang istimewa.</p>
-                        <ul class="room-size">
-                            <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
-                            <li><i class="fa fa-arrow-right"></i>Beds: 2 Single(s) </li>
+<!-- Kamar Deluxe -->
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="room-img">
+                <div class="box12">
+                    <img src="img/Deluxe.JPG"> <!-- Added image content for Deluxe room -->
+                    <div class="box-content">
+                        <h3 class="title">Deluxe</h3>
+                        <ul class="icon">
+                            <li><a href="#" data-toggle="modal" data-target="#modal-id"><i class="fa fa-link"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="room-rate">
-                        <h3>From</h3>
-                        <h1>$475.000 Rp</h1>
-                        <a href="#">Book Now</a>
-                    </div>
-                </div>
             </div>
-            <hr>
         </div>
+        <div class="col-md-6">
+            <div class="room-des">
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Single Deluxe</a></h3>
+                <p>Hadiri kenyamanan luar biasa dalam Kamar Deluxe kami yang menawarkan desain mewah, fasilitas premium, dan pemandangan yang menakjubkan untuk pengalaman menginap yang istimewa.</p>
+                <ul class="room-size">
+                    <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
+                    <li><i class="fa fa-arrow-right"></i>Beds: 1 Single(s) </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="room-rate">
+                <h3>From</h3>
+                <h1>$475</h1>
+                <a href="#">Pesan</a>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
     </div>
 </div>
 <!-- Room Section End -->
