--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="room-des">
-                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Single Standar</a></h3>
+                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Junior</a></h3>
                         <p>Kamar Junior menawarkan kenyamanan sederhana namun elegan dengan fasilitas lengkap untuk memenuhi kebutuhan penginapan Anda.</p>
                         <ul class="room-size">
                             <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
@@ -269,7 +269,7 @@
         </div>
         <div class="col-md-6">
             <div class="room-des">
-                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Double Superior</a></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Superior</a></h3>
                 <p>Nikmati kemewahan dan kenyamanan Kamar Superior kami yang luas dengan desain modern dan fasilitas terbaik untuk pengalaman menginap yang tak terlupakan.</p>
                 <ul class="room-size">
                     <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
@@ -306,7 +306,7 @@
         </div>
         <div class="col-md-6">
             <div class="room-des">
-                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Single Deluxe</a></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Deluxe</a></h3>
                 <p>Hadiri kenyamanan luar biasa dalam Kamar Deluxe kami yang menawarkan desain mewah, fasilitas premium, dan pemandangan yang menakjubkan untuk pengalaman menginap yang istimewa.</p>
                 <ul class="room-size">
                     <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
