--- a/room.html
+++ b/room.html
@@ -29,18 +29,18 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/BatuEmas.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li class="active"><a href="room.html">Rooms</a></li>
-                    <li><a href="amenities.html">Amenities</a></li>
-                    <li><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+<li class="active"><a href="index.html">Beranda</a></li>
+<li><a href="about.html">Tentang Kami</a></li>
+<li><a href="room.html">Kamar</a></li>
+<li><a href="amenities.html">Fasilitas</a></li>
+<li><a href="booking.html">Pemesanan</a></li>
+<li><a href="login.html">Masuk</a></li>
+<li><a href="contact.html">Hubungi Kami</a></li>
                 </ul>
             </nav>
         </header>
