--- a/login.html
+++ b/login.html
@@ -34,12 +34,12 @@
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-<li class="active"><a href="index.html">Beranda</a></li>
+<li><a href="index.html">Beranda</a></li>
 <li><a href="about.html">Tentang Kami</a></li>
 <li><a href="room.html">Kamar</a></li>
 <li><a href="amenities.html">Fasilitas</a></li>
 <li><a href="booking.html">Pemesanan</a></li>
-<li><a href="login.html">Masuk</a></li>
+<li class="active"><a href="login.html">Masuk</a></li>
 <li><a href="contact.html">Hubungi Kami</a></li>
                 </ul>
             </nav>
