--- a/room.html
+++ b/room.html
@@ -34,9 +34,9 @@
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-<li class="active"><a href="index.html">Beranda</a></li>
+<li><a href="index.html">Beranda</a></li>
 <li><a href="about.html">Tentang Kami</a></li>
-<li><a href="room.html">Kamar</a></li>
+<li class="active"><a href="room.html">Kamar</a></li>
 <li><a href="amenities.html">Fasilitas</a></li>
 <li><a href="booking.html">Pemesanan</a></li>
 <li><a href="login.html">Masuk</a></li>
