--- a/contact.html
+++ b/contact.html
@@ -29,86 +29,87 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/BatuEmas.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="room.html">Rooms</a></li>
-                    <li><a href="amenities.html">Amenities</a></li>
-                    <li><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li class="active"><a href="contact.html">Contact Us</a></li>
+<li><a href="index.html">Beranda</a></li>
+<li><a href="about.html">Tentang Kami</a></li>
+<li><a href="room.html">Kamar</a></li>
+<li><a href="amenities.html">Fasilitas</a></li>
+<li><a href="booking.html">Pemesanan</a></li>
+<li><a href="login.html">Masuk</a></li>
+<li class="active"><a href="contact.html">Hubungi Kami</a></li>
                 </ul>
             </nav>
         </header>
         <!-- Header Section End -->
         
-        <!-- Contact Section Start -->
-        <div id="contact">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Contact</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.
-                    </p>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="row contact-info">
-                            <div class="col-md-4">
-                                <div class="info-item">
-                                    <p><i class="fa fa-map-marker"></i> <a> Jl. Jend. Ahmad Yani No.82Kwamki, Kec. Mimika Baru, Kabupaten Mimika, Papua 99971</a></p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="info-item">
-                                    <p><i class="fa fa-envelope"></i> <a href="mailto:info@example.com">wismabatuemas016@gmail.com</a></p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="info-item">
-                                    <p><i class="fa fa-phone"></i><a href="tel:+1 234 567 8900">+62 0822 2664 4055</a></p>
-                                </div>
-                            </div>
+<!-- Contact Section Start -->
+<div id="contact">
+    <div class="container">
+        <div class="section-header">
+            <h2>Kontak</h2>
+            <p>
+                Silakan hubungi kami untuk informasi lebih lanjut atau pertanyaan Anda. Kami siap membantu Anda dengan segala kebutuhan dan permintaan.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row contact-info">
+                    <div class="col-md-4">
+                        <div class="info-item">
+                            <p><i class="fa fa-map-marker"></i> <a> Jl. Jend. Ahmad Yani No.82Kwamki, Kec. Mimika Baru, Kabupaten Mimika, Papua 99971</a></p>
                         </div>
                     </div>
-                    <div class="col-md-12">
-                        <div class="contact-form">
-                            <div id="success"></div>
-                            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                                <div class="form-row">
-                                    <div class="control-group col-sm-6">
-                                        <label>Your Name</label>
-                                        <input type="text" class="form-control" id="name" placeholder="E.g. John Sina" required="required" data-validation-required-message="Please enter your name" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group col-sm-6">
-                                        <label>Email</label>
-                                        <input type="email" class="form-control" id="email" placeholder="E.g. email@example.com" required="required" data-validation-required-message="Please enter your email" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <label>Subject</label>
-                                    <input type="text" class="form-control" id="subject" placeholder="E.g. Room Booking" required="required" data-validation-required-message="Please enter a subject" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group">
-                                    <label>Message</label> 
-                                    <textarea class="form-control" id="message" rows="5" placeholder="E.g. I need a premium room" required="required" data-validation-required-message="Please enter your message"></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="button"><button type="submit" id="sendMessageButton">Send Message</button></div>
-                            </form>
+                    <div class="col-md-4">
+                        <div class="info-item">
+                            <p><i class="fa fa-envelope"></i> <a href="mailto:wismabatuemas016@gmail.com">wismabatuemas016@gmail.com</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="info-item">
+                            <p><i class="fa fa-phone"></i><a href="tel:+6282226644055">+62 0822 2664 4055</a></p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-md-12">
+                <div class="contact-form">
+                    <div id="success"></div>
+                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <div class="form-row">
+                            <div class="control-group col-sm-6">
+                                <label>Nama Anda</label>
+                                <input type="text" class="form-control" id="name" placeholder="Contoh: Budi Santoso" required="required" data-validation-required-message="Silakan masukkan nama Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group col-sm-6">
+                                <label>Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Contoh: email@contoh.com" required="required" data-validation-required-message="Silakan masukkan email Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label>Subjek</label>
+                            <input type="text" class="form-control" id="subject" placeholder="Contoh: Pemesanan Kamar" required="required" data-validation-required-message="Silakan masukkan subjek pesan Anda" />
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div class="control-group">
+                            <label>Pesan</label> 
+                            <textarea class="form-control" id="message" rows="5" placeholder="Contoh: Saya membutuhkan kamar premium" required="required" data-validation-required-message="Silakan masukkan pesan Anda"></textarea>
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div class="button"><button type="submit" id="sendMessageButton">Kirim Pesan</button></div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <!-- Contact Section End -->
+    </div>
+</div>
+<!-- Contact Section End -->
+
         
         <!-- Footer Section Start -->
         <div id="footer">
